Fix contrast on links

--- a/app/src/components/ViewEvent/ViewEvent.module.scss
+++ b/app/src/components/ViewEvent/ViewEvent.module.scss
@@ -161,3 +161,7 @@
     margin-top: 10px;
   }
 }
+
+.link {
+  color: var(--skyfritt-kontrast);
+}
